fixed squished images

--- a/src/assets/style/screen.css
+++ b/src/assets/style/screen.css
@@ -195,6 +195,7 @@ div.box {
 .post img {
   display: block;
   max-width: 100%;
+  height: auto;
   margin: 0 auto 1em;
 }
 
